# Janus

./: .commitlintrc.json  .editorconfig  .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  package.json  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
benches/: directory_walk.rs  hashing.rs
docs/: perf.md
examples/: basic_sync.sh
scripts/: build-release.sh  setup-dev.sh
src/: core.rs  hash.rs  io.rs  lib.rs  main.rs  progress.rs
tests/: integration_sync.rs  unit_hash.rs  unit_rename.rs
