[package]
name = "janus"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Beautifully fast, simple & reliable file syncing"
repository = "https://github.com/procoperr/janus"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
sha2 = { version = "0.10", optional = true }
rayon = "1.8"
ignore = "0.4"
thiserror = "1.0"
anyhow = "1.0"
indicatif = { version = "0.17", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"

[features]
default = ["blake3"]
blake3 = []
sha256 = ["sha2"]

[[bin]]
name = "jan"
path = "src/main.rs"

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "directory_walk"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.bench]
inherits = "release"
